# PMX-CORTEX

./: .gitignore  .gitmodules  CLAUDE.md  PMX-CORTEX.code-workspace  microbit.code-workspace  pio.code-workspace  pmx.code-workspace
brain/: ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json
brain/build-arm-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  pmx-test
brain/build-arm-release/: CMakeCache.txt  Makefile  cmake_install.cmake  pmx-test
brain/build-simu-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  pmx-test
brain/build-simu-release/: CMakeCache.txt  Makefile  cmake_install.cmake  pmx-test
brain/cmake/: toolchain-arm-opos6ul.cmake
brain/memory/: project_migration_plan.md
brain/test/: main_test.cpp
brain/test/manual/: test_screen.cpp
robot/: ARCHITECTURE.md  ASSERV_MIGRATION_COMMUNICATION.md  BUILD.md  CMakeLists.txt  CMakePresets.json  Doxyfile  HARDWARE_CONFIG.md  SENSORS_DETECTION_MIGRATION.md  hardware.conf
robot/build-arm-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  common-test
robot/build-arm-release/: CMakeCache.txt  Makefile  cmake_install.cmake  common-test
robot/build-simu-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  common-test
robot/build-simu-release/: CMakeCache.txt  Makefile  cmake_install.cmake  common-test
robot/config/opos6ul/: CONFIG-STATUS.md  FLASH-OPOS6UL.md  bios_oposul1.txt  bios_oposul2.txt  bios_oposul3.txt  boot_oposul1.txt  boot_oposul2.txt  boot_oposul3.txt
robot/docs/html/: AActionDriver_8hpp.html  AActionDriver_8hpp__dep__incl.map  AActionDriver_8hpp__dep__incl.md5  AActionDriver_8hpp_source.html  AActionsElement_8hpp.html  AActionsElement_8hpp__dep__incl.map  AActionsElement_8hpp__dep__incl.md5  AActionsElement_8hpp_source.html  AAsservDriver_8hpp.html  AAsservDriver_8hpp__dep__incl.map  AAsservDriver_8hpp__dep__incl.md5  AAsservDriver_8hpp__incl.map  AAsservDriver_8hpp__incl.md5  AAsservDriver_8hpp_source.html  AAutomateState_8hpp.html  AAutomateState_8hpp__dep__incl.map  AAutomateState_8hpp__dep__incl.md5  AAutomateState_8hpp__incl.map  AAutomateState_8hpp__incl.md5  AAutomateState_8hpp_source.html  AButtonDriver_8hpp.html  AButtonDriver_8hpp__dep__incl.map  AButtonDriver_8hpp__dep__incl.md5  AButtonDriver_8hpp_source.html  AColorDriver_8hpp.html  AColorDriver_8hpp__dep__incl.map  AColorDriver_8hpp__dep__incl.md5  AColorDriver_8hpp__incl.map  AColorDriver_8hpp__incl.md5  AColorDriver_8hpp_source.html  ALcdShieldDriver_8hpp.html  ALcdShieldDriver_8hpp__dep__incl.map  ALcdShieldDriver_8hpp__dep__incl.md5  ALcdShieldDriver_8hpp__incl.map  ALcdShieldDriver_8hpp__incl.md5  ALcdShieldDriver_8hpp_source.html  ALedDriver_8hpp.html  ALedDriver_8hpp__dep__incl.map  ALedDriver_8hpp__dep__incl.md5  ALedDriver_8hpp__incl.map  (+7815 more)
robot/md/: ARCHITECTURE.md  ASSERV_BUG_GLITCH_I2C.md  ASSERV_MIGRATION_COMMUNICATION.md  ASSERV_NUCLEO_INIT_TODO.md  DETECTION_ADV_CONVENTION.md  DETECTION_SCENARIO_TEST.md  HARDWARE_CONFIG.md  ISONPATH_GOTO_MIGRATION.md  O_STATE_NEW_INIT.md  SENSORS_DETECTION_MIGRATION.md  STRATEGY_DECISION_RUNNER.md  STRATEGY_JSON_EXECUTION.md  STRATEGY_JSON_FORMAT.md  STRATEGY_JSON_ROADMAP.md  STRATEGY_RESEARCH.md  TESTS_CHAIN_VALIDATION.md  Télémétrie.md
robot/sh/: deploy.sh  recup-svg.sh  ssh-connect.sh
robot/src/bot-opos6ul/: LoggerInitialize.cpp  Main.cpp  OPOS6UL_ActionsExtended.cpp  OPOS6UL_ActionsExtended.hpp  OPOS6UL_AsservExtended.cpp  OPOS6UL_AsservExtended.hpp  OPOS6UL_IAExtended.cpp  OPOS6UL_IAExtended.hpp  OPOS6UL_RobotExtended.cpp  OPOS6UL_RobotExtended.hpp  OPOS6UL_SvgWriterExtended.cpp  OPOS6UL_SvgWriterExtended.hpp  O_ActionManagerTimerTest.cpp  O_ActionManagerTimerTest.hpp  O_ActionTimerSchedulerTest.cpp  O_ActionTimerSchedulerTest.hpp  O_AsservCalibrationTest.cpp  O_AsservCalibrationTest.hpp  O_AsservLineRotateOldTest.cpp  O_AsservLineRotateTest.cpp  O_AsservLineRotateTest.hpp  O_AsservTest.cpp  O_AsservTest.hpp  O_AsservWaypointTest.cpp  O_AsservWaypointTest.hpp  O_AsservXYRotateTest.cpp  O_AsservXYRotateTest.hpp  O_Asserv_CalageTest.cpp  O_Asserv_CalageTest.hpp  O_Asserv_SquareTest.cpp  O_Asserv_SquareTest.hpp  O_ButtonBarTest.cpp  O_ButtonBarTest.hpp  O_GroveColorTest.cpp  O_GroveColorTest.hpp  O_IAbyPathTest.cpp  O_IAbyPathTest.hpp  O_LcdBoardTest.hpp  O_LedBarTest.cpp  O_LedBarTest.hpp  (+32 more)
robot/src/bot-test-opos6ul/: O_AsservCalibrationTest.cpp  O_AsservCalibrationTest.hpp  O_AsservLineRotateOldTest.cpp  O_AsservLineRotateOldTest.hpp  O_AsservLineRotateTest.cpp  O_AsservLineRotateTest.hpp  O_AsservTest.cpp  O_AsservTest.hpp  O_AsservWaypointTest.cpp  O_AsservWaypointTest.hpp  O_AsservXYRotateTest.cpp  O_AsservXYRotateTest.hpp  O_Asserv_CalageTest.cpp  O_Asserv_CalageTest.hpp  O_Asserv_SquareTest.cpp  O_Asserv_SquareTest.hpp  O_DetectionBackwardTest.cpp  O_DetectionBackwardTest.hpp  O_DetectionForwardTest.cpp  O_DetectionForwardTest.hpp  O_DetectionRetryBackwardTest.cpp  O_DetectionRetryBackwardTest.hpp  O_DetectionRetryForwardTest.cpp  O_DetectionRetryForwardTest.hpp  O_DetectionScenarioTest.cpp  O_DetectionScenarioTest.hpp  O_GroveColorTest.cpp  O_GroveColorTest.hpp  O_IAbyPathTest.cpp  O_IAbyPathTest.hpp  O_LcdBoardTest.cpp  O_LedBarTest.cpp  O_NavigatorBackTest.cpp  O_NavigatorBackTest.hpp  O_NavigatorMovementTest.hpp  O_SensorsTest.cpp  O_ServoObjectsTest.cpp  O_ServoObjectsTest.hpp  O_ServoStepTest.cpp  O_ServoStepTest.hpp  (+3 more)
robot/src/common/: HardwareConfig.cpp  HardwareConfig.hpp  Robot.cpp  Robot.hpp
robot/src/driver-arm/: ActionDriver.cpp  ActionDriver.hpp  Adafruit_MCP23017.cpp  Adafruit_MCP23017.hpp  Adafruit_RGBLCDShield.cpp  Adafruit_RGBLCDShield.hpp  AsI2cAtomic.hpp  AsservCborDriver.cpp  AsservCborDriver.hpp  AsservDriver.cpp  AsservDriver.hpp  BeaconSensors.cpp  BeaconSensors.hpp  ButtonDriver.cpp  ButtonDriver.hpp  CCAx12Teensy.cpp  CCAx12Teensy.hpp  Gp2y0e02b.cpp  Gp2y0e02b.hpp  GpioPCA9555.cpp  GpioPCA9555.hpp  GroveColorSensor.cpp  GroveColorSensor.hpp  LcdShieldDriver.cpp  LcdShieldDriver.hpp  LedDriver.cpp  LedDriver.hpp  MD25.cpp  MD25.hpp  RobotPositionShared.cpp  RobotPositionShared.hpp  SensorsDriver.cpp  SensorsDriver.hpp  (+9 more)
(+816 files in other folders)
